Fixes issues on small device with Portfolio pages

--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,6 @@ body {
     height: 300px;
 }
 
-
 .home-banner {
     background-image: url("../images/banner-header.jpg");
 }
@@ -64,12 +63,9 @@ body {
     margin-left: 20px;
 }
 
-.logo-link{
-    padding-left: 1em;
-}
-
 .logo-link img {
     max-width: 200px;
+    padding: 0.5em;
 }
 
 
@@ -97,8 +93,8 @@ body {
     align-items: center;
 }
 
-.nav-bar li a, .nav-bar ul.sub-menu li a, .port-nav-menu li a  {
-    color: rgba(26,26,26, .7); 
+.nav-bar li a, .nav-bar ul.sub-menu li a  {
+    color: rgba(42, 35, 111, 0.7); 
     text-decoration: none;
 }
 
@@ -108,10 +104,8 @@ body {
 
 .nav-bar li:hover a, ul.sub-menu li:hover a {
     color: rgba(26, 26, 26, 1); 
-}
+}   
 
-
-/* .nav-bar li:hover > ul, */
 .nav-bar .show {
     display: block;  
 }
@@ -217,87 +211,63 @@ body {
     font-size: 10px;
 }
 
-.resume-page {
-    padding: 1em 3em 0 3em;
-    margin: 0 auto;
-}
-
-.resume-row {
-    border-bottom: solid 1px rgba(147, 144, 144, 0.2);
-    display: flex;
-}
-
-.resume-row:last-child {
-    border-bottom: 0;
-}
-
-.resume-dates {
-    flex: 0 0 auto;
-    font-weight: 700;
-    width: 10em;
-}  
-
-.resume-detail {
-    flex: 1 1 auto;
-    padding-left: 2em;
-    text-align: justify;
-}
-
-.job-title {
-    font-weight: 700;
-    margin-bottom: 10px;
-}
-
-.job-location {
-    font-style: italic;
-    margin-top: 0px;
-}
-
-.job-list-detail li {
-    margin-bottom: 10px;
-}
-
-.work-exp-details {
-    padding: 0 1em 0 1em;
-}
-
-.education-details {
-    border-top:solid 1px rgba(44, 42, 42, 0.2);
-    padding: 0 1em 0 1em;
-}
-
 
 .portfolio-page {
-    display: grid;
-    column-gap: 30px;
-    width: 100%;
-    padding: 1em 3em 0 3em;
+    display: flex;
+    padding: 1em 5% 1em 5%;
     margin: 0 auto;
-    grid-template-areas:
-        "port-nav-menu articles";
-    grid-template-columns: 1fr 5fr; 
-    grid-template-rows: auto auto;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
+
 .port-nav-menu {
-    grid-area: port-nav-menu;
     font-size: 1em;
     margin-top: 3em;
     text-align:left;
 }
 
-.port-nav-menu li:hover a {
-    color: rgba(26, 26, 26, 1);
+.port-nav-menu ul {
+    padding-left: 0;
+    padding-right: 2em;
 }
 
-.port-nav-menu li.active a {
-    color: rgba(26, 26, 26, 1);
+.port-nav-menu li:first-child {
+    padding-bottom: 1em;
+}
+
+.port-nav-menu li:first-child:before {
+    border: 0   ;
+}
+
+.port-nav-menu li:before {
+    content: '';
+    border: solid #e6e4e0;
+    border-width: 0 2px 2px 0;
+    width: 7px;
+    height: 7px;
+    margin-right: 0.5em;
+    margin-top: 0.5em;
+    pointer-events: none;
+    transition: transform 0.1s ease-in-out;
+    transform: translateY(-50%) rotate(315deg); 
+}
+
+.port-nav-menu li a {
+    color: rgb(149, 147, 182); 
+    text-decoration: none;
+}
+
+.port-nav-menu li:hover a, .port-nav-menu li.active a {
+    color: rgba(9, 4, 91, 0.7);
 }
 
 
 .articles {
-    grid-area: articles;
+    display: flex;
     text-align: justify;
+    flex: 2;
+    flex-direction: column;
 }
 
 .articles section {
@@ -456,4 +426,27 @@ body {
     .nav-bar li {
         float: none;
     }
-}
+
+    .portfolio-page {
+        flex-direction: column;
+    }
+
+    .port-nav-menu {
+        margin: 0;
+    }
+
+    .port-nav-menu ul {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        padding-right: 0;
+        width: 100%;
+    }
+
+    .port-nav-menu ul li:first-child{
+        padding-left: 0;
+        display: none;
+    }
+
+}   
